--- a/patrones/nbproject/project.properties
+++ b/patrones/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=patrones
-main.class=patrones.Tester
+main.class=edu.ulatina.diariofacil.patrones.Tester
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
